--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,23 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
-</ion-content>
+    <ion-navbar >
+      <ion-title>
+        ToDo App
+      </ion-title>
+      <ion-buttons start>
+        <button ion-button (click)="addTarea()">
+          <ion-icon name="add"></ion-icon>
+        </button>
+      </ion-buttons>
+    </ion-navbar>
+  </ion-header>
+  
+  <ion-content>
+    <ion-list>
+      <ion-item-sliding *ngFor='let tarea of tareas | async'>
+          <ion-item>
+        {{tarea.title}}
+        
+      </ion-item>
+      </ion-item-sliding>
+    </ion-list>
+  </ion-content>
