--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,12 +12,11 @@
   </ion-header>
   
   <ion-content>
-    <ion-list>
-      <ion-item-sliding *ngFor='let tarea of tareas | async'>
-          <ion-item>
-        {{tarea.title}}
-        
-      </ion-item>
-      </ion-item-sliding>
-    </ion-list>
+    
+      <ion-list>
+          <ion-item class="text" *ngFor="let item of listaTareas | async">
+             {{item.$value}}
+          </ion-item>
+       </ion-list>
+
   </ion-content>
